--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,135 +5,155 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FachLogic.MainActivity"
-    android:background="@color/cardview_dark_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#121212"
+    android:padding="20dp"
+    tools:context=".FachLogic.MainActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/measure"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/measure"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="10dp"
-        android:textStyle="bold"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/height"
-        android:orientation="horizontal"
-        android:padding="12dp"
-        android:background="@drawable/relative_layout_bg">
-        <TextView
-            android:id="@+id/heightTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/height"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:textStyle="italic"
-            android:id="@+id/heightValue"
-            android:textSize="16sp"
-            android:textColor="#a4a5a6"/>
-    </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/weight"
-        android:layout_below="@id/height"
-        android:padding="12dp"
-        android:background="@drawable/relative_layout_bg">
-        <TextView
-            android:id="@+id/weighttxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/weight"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:textStyle="italic"
-            android:id="@+id/weightValue"
-            android:textSize="16sp"
-            android:textColor="#a4a5a6"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/calorie"
-        android:layout_below="@id/weight"
-        android:padding="12dp"
-        android:background="@drawable/relative_layout_bg">
-        <TextView
-            android:id="@+id/calorietxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/calorie"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:textStyle="italic"
-            android:id="@+id/calorieValue"
-            android:textSize="16sp"
-            android:textColor="#a4a5a6"/>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/measure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/measure"
+                android:textSize="24sp"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:layout_marginBottom="20dp" />
 
-    <LinearLayout
+            <LinearLayout
+                android:id="@+id/height"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/relative_layout_bg">
+
+                <TextView
+                    android:id="@+id/heightTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/height"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/heightValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="italic"
+                    android:textSize="16sp"
+                    android:textColor="#B0B0B0" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/weight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/relative_layout_bg">
+
+                <TextView
+                    android:id="@+id/weighttxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/weight"
+                    android:textSize="16sp"
+                    android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/weightValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="italic"
+                    android:textSize="16sp"
+                    android:textColor="#B0B0B0" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/calorie"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/relative_layout_bg">
+
+                <TextView
+                    android:id="@+id/calorietxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/calorie"
+                    android:textSize="16sp"
+                    android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/calorieValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="italic"
+                    android:textSize="16sp"
+                    android:textColor="#B0B0B0" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/bodyParts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/relative_layout_bg">
+
+                <TextView
+                    android:id="@+id/bodyPartsTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/body_parts"
+                    android:textSize="16sp"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/fat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/relative_layout_bg">
+
+                <TextView
+                    android:id="@+id/fattxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fat"
+                    android:textSize="16sp"
+                    android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/fatValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0%"
+                    android:textStyle="italic"
+                    android:textSize="16sp"
+                    android:textColor="#B0B0B0" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bodyParts"
-        android:layout_below="@id/calorie"
-        android:padding="12dp"
-        android:background="@drawable/relative_layout_bg">
-        <TextView
-            android:id="@+id/bodyPartsTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/body_parts"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/fat"
-        android:layout_below="@id/bodyParts"
-        android:padding="12dp"
-        android:background="@drawable/relative_layout_bg">
-        <TextView
-            android:id="@+id/fattxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/fat"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="0%"
-            android:textStyle="italic"
-            android:id="@+id/fatValue"
-            android:textSize="16sp"
-            android:textColor="#a4a5a6"/>
-    </LinearLayout>
+        app:menu="@menu/bottom_nav_menu"
+        android:background="#1F1F1F"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white" />
+
 </LinearLayout>
