--- a/app/src/main/res/layout/body_parts.xml
+++ b/app/src/main/res/layout/body_parts.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/bodyPartsMain"
-    android:background="@color/cardview_dark_background">
+    android:background="#121212"
+    android:orientation="vertical"
+    android:padding="20dp">
 
 
     <TextView
@@ -11,11 +13,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/bodyPartsPagetxt"
         android:text="@string/body_parts"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textColor="@color/white"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:textStyle="bold"/>
 
     <LinearLayout
