--- a/app/src/main/res/layout/update_entry.xml
+++ b/app/src/main/res/layout/update_entry.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/removeEntryButton"
         android:text="@string/yes"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#4DB6AC"/>
 
 </LinearLayout>
